make it easy to run those examples with h2h